--- a/templates/articles.html
+++ b/templates/articles.html
@@ -32,7 +32,7 @@
     <div class="flex lg:flex-1">
       <a href="#" class="-m-1.5 p-1.5">
         <span class="sr-only">Your Company</span>
-        <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
+        <img class="h-8 w-auto" src="https://www.creativefabrica.com/wp-content/uploads/2020/06/18/Plane-Navigation-Travel-Logo-Graphics-4399326-1.png" alt="">
       </a>
     </div>
     <div class="flex lg:hidden">
@@ -44,12 +44,14 @@
       </button>
     </div>
     <div class="hidden lg:flex lg:gap-x-12">
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Features</a>
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Marketplace</a>
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Company</a>
+      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Oferta</a>
+      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Last Minute</a>
+      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">All Inclusive</a>
+      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">O Nas</a>
+      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Kontakt</a>
     </div>
     <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Log in <span aria-hidden="true">&rarr;</span></a>
+      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Zaloguj się <span aria-hidden="true">&rarr;</span></a>
     </div>
   </nav>
   <!-- Mobile menu, show/hide based on menu open state. -->
@@ -90,38 +92,35 @@
   <div class="flex justify-between px-4 mx-auto max-w-screen-xl ">
       <article class="mx-auto w-full max-w-2xl format format-sm sm:format-base lg:format-lg format-blue dark:format-invert">
           <header class="mb-4 lg:mb-6 not-format">
-              <h1 class="mb-4 text-3xl font-extrabold leading-tight text-gray-900 lg:mb-6 lg:text-4xl dark:text-white">Best practices for successful prototypes</h1>
+              <h1 class="mb-4 text-3xl font-extrabold leading-tight text-gray-900 lg:mb-6 lg:text-4xl dark:text-gray">Witaj w Beauty Travel - Twoim przewodniku przez świat piękna i przygody!</h1>
           </header>
-          <p class="lead">Flowbite is an open-source library of UI components built with the utility-first
-              classes from Tailwind CSS. It also includes interactive elements such as dropdowns, modals,
-              datepickers.</p>
-          <p>Before going digital, you might benefit from scribbling down some ideas in a sketchbook. This way,
-              you can think things through before committing to an actual design project.</p>
-          <p>But then I found a <a href="https://flowbite.com">component library based on Tailwind CSS called
-                  Flowbite</a>. It comes with the most commonly used UI components, such as buttons, navigation
-              bars, cards, form elements, and more which are conveniently built with the utility classes from
-              Tailwind CSS.</p>
-          <figure><img src="https://flowbite.s3.amazonaws.com/typography-plugin/typography-image-1.png" alt="">
-              <figcaption>Digital art by Anonymous</figcaption>
+          <p class="lead">Jesteśmy biurem podróży stworzonym specjalnie dla kobiet, które marzą o odkrywaniu
+              nie tylko fascynujących zakątków świata, ale również inspirujących doświadczeń związanych z pięknem i relaksem.</p>
+          <p>Nasze unikalne wycieczki łączą podróżowanie z przyjemnościami związanymi z dbaniem o siebie. Oferujemy
+              niezapomniane wyjazdy tematyczne, w tym podróże solo, wycieczki spa, kulinarne eskapady i wiele innych,
+              zapewniając nie tylko bezpieczeństwo, ale także wyjątkowe chwile, które pozostaną w pamięci na zawsze.</p>
+          <p>Z nami możesz cieszyć się podróżami w grupie, zyskując nowe przyjaźnie, lub odkrywać świat na własną rękę,
+              korzystając z naszych spersonalizowanych porad podróżniczych. Bezpieczeństwo, komfort i radość podróżowania
+              są dla nas priorytetem.</p>
+          <figure><img src="https://ocdn.eu/pulscms-transforms/1/E5zk9kpTURBXy81NDM5ZjVkODUzNThjNTZkNzhkMjhlZmQ2YjdjNmM1NS5qcGeTlQMAzLPNFmLNDJeVAs0EsADDw5MJpmJhYzMzZQbeAAGhMAE/gdzie-na-wakacje-w-tym-roku-oto-trzy-najtansze-kierunki.jpeg" alt="">
+              <figcaption>Digital art by Shutterstock</figcaption>
           </figure>
-          <h2>Getting started with Flowbite</h2>
-          <p>First of all you need to understand how Flowbite works. This library is not another framework.
-              Rather, it is a set of components based on Tailwind CSS that you can just copy-paste from the
-              documentation.</p>
+          <p>Dołącz do nas, by odkrywać świat i czerpać radość z podróży w otoczeniu równie zafascynowanych kobiet.
+              Beauty Travel - Twoje miejsce w podróży do piękna i przygód!</p>
       </article>
   </div>
 </main>
 
 <aside aria-label="Related articles" class="py-8 lg:py-24 bg-gray-50 dark:bg-gray-800">
   <div class="px-4 mx-auto max-w-screen-xl">
-      <h2 class="mb-8 text-2xl font-bold text-gray-900 dark:text-white">Related articles</h2>
+      <h2 class="mb-8 text-2xl font-bold text-gray-900 dark:text-white">Inspiracje</h2>
       <div class="grid gap-12 sm:grid-cols-2 lg:grid-cols-4">
           <article class="max-w-xs">
               <a href="#">
                   <img src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/article/blog-1.png" class="mb-5 rounded-lg" alt="Image 1">
               </a>
               <h2 class="mb-2 text-xl font-bold leading-tight text-gray-900 dark:text-white">
-                  <a href="#">Our first office</a>
+                  <a href="#">Grecja</a>
               </h2>
               <p class="mb-4 text-gray-500 dark:text-gray-400">Over the past year, Volosoft has undergone many changes! After months of preparation.</p>
               <a href="#" class="inline-flex items-center font-medium underline underline-offset-4 text-primary-600 dark:text-primary-500 hover:no-underline">
@@ -133,7 +132,7 @@
                   <img src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/article/blog-2.png" class="mb-5 rounded-lg" alt="Image 2">
               </a>
               <h2 class="mb-2 text-xl font-bold leading-tight text-gray-900 dark:text-white">
-                  <a href="#">Enterprise design tips</a>
+                  <a href="#">Turcja</a>
               </h2>
               <p class="mb-4  text-gray-500 dark:text-gray-400">Over the past year, Volosoft has undergone many changes! After months of preparation.</p>
               <a href="#" class="inline-flex items-center font-medium underline underline-offset-4 text-primary-600 dark:text-primary-500 hover:no-underline">
@@ -145,7 +144,7 @@
                   <img src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/article/blog-3.png" class="mb-5 rounded-lg" alt="Image 3">
               </a>
               <h2 class="mb-2 text-xl font-bold leading-tight text-gray-900 dark:text-white">
-                  <a href="#">We partnered with Google</a>
+                  <a href="#">Wyspy Kanaryjskie</a>
               </h2>
               <p class="mb-4  text-gray-500 dark:text-gray-400">Over the past year, Volosoft has undergone many changes! After months of preparation.</p>
               <a href="#" class="inline-flex items-center font-medium underline underline-offset-4 text-primary-600 dark:text-primary-500 hover:no-underline">
@@ -157,7 +156,7 @@
                   <img src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/article/blog-4.png" class="mb-5 rounded-lg" alt="Image 4">
               </a>
               <h2 class="mb-2 text-xl font-bold leading-tight text-gray-900 dark:text-white">
-                  <a href="#">Our first project with React</a>
+                  <a href="#">Dominikana</a>
               </h2>
               <p class="mb-4  text-gray-500 dark:text-gray-400">Over the past year, Volosoft has undergone many changes! After months of preparation.</p>
               <a href="#" class="inline-flex items-center font-medium underline underline-offset-4 text-primary-600 dark:text-primary-500 hover:no-underline">
