--- a/templates/articles.html
+++ b/templates/articles.html
@@ -117,48 +117,54 @@
       <div class="grid gap-12 sm:grid-cols-2 lg:grid-cols-4">
           <article class="max-w-xs">
               <a href="#">
-                  <img src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/article/blog-1.png" class="mb-5 rounded-lg" alt="Image 1">
+                  <img src="https://fly.pl/wp-content/uploads/2020/06/Grecja_Fly.pl_.jpg" class="mb-5 rounded-lg" alt="Image 1">
               </a>
               <h2 class="mb-2 text-xl font-bold leading-tight text-gray-900 dark:text-white">
                   <a href="#">Grecja</a>
               </h2>
-              <p class="mb-4 text-gray-500 dark:text-gray-400">Over the past year, Volosoft has undergone many changes! After months of preparation.</p>
+              <p class="mb-4 text-gray-500 dark:text-gray-400">Oferujemy wyjątkowe wycieczki do malowniczych greckich wysp, gdzie błękitne morze
+                  spotyka się z białymi domkami. Doświadcz kultury, smaków i niezwykłych widoków, które Grecja ma do zaoferowania.</p>
               <a href="#" class="inline-flex items-center font-medium underline underline-offset-4 text-primary-600 dark:text-primary-500 hover:no-underline">
                   Read in 2 minutes
               </a>
           </article>
           <article class="max-w-xs">
               <a href="#">
-                  <img src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/article/blog-2.png" class="mb-5 rounded-lg" alt="Image 2">
+                  <img src="https://podrozowac.pl/wp-content/uploads/2023/04/turcja_bezpieczenstwo_1.jpg" class="mb-5 rounded-lg" alt="Image 2">
               </a>
               <h2 class="mb-2 text-xl font-bold leading-tight text-gray-900 dark:text-white">
                   <a href="#">Turcja</a>
               </h2>
-              <p class="mb-4  text-gray-500 dark:text-gray-400">Over the past year, Volosoft has undergone many changes! After months of preparation.</p>
+              <p class="mb-4  text-gray-500 dark:text-gray-400">Odkryj fascynujący miks kultur i przeszłości podczas podróży do Turcji. Zwiedzaj historyczne
+                  zabytki i delektuj się aromatyczną kuchnią. Turcja to nie tylko krajobrazy, ale także spotkanie z sercem Orientu.</p>
               <a href="#" class="inline-flex items-center font-medium underline underline-offset-4 text-primary-600 dark:text-primary-500 hover:no-underline">
                   Read in 12 minutes
               </a>
           </article>
           <article class="max-w-xs">
               <a href="#">
-                  <img src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/article/blog-3.png" class="mb-5 rounded-lg" alt="Image 3">
+                  <img src="https://dcontent.inviacdn.net/shared/img/web-830/2023/3/10/m0/1693701.jpg" class="mb-5 rounded-lg" alt="Image 3">
               </a>
               <h2 class="mb-2 text-xl font-bold leading-tight text-gray-900 dark:text-white">
                   <a href="#">Wyspy Kanaryjskie</a>
               </h2>
-              <p class="mb-4  text-gray-500 dark:text-gray-400">Over the past year, Volosoft has undergone many changes! After months of preparation.</p>
+              <p class="mb-4  text-gray-500 dark:text-gray-400">Nasze wycieczki zapewniają idealne połączenie błękitnego
+                  oceanu, złotego piasku i niezwykłych krajobrazów. Doświadcz niezapomnianych chwil na Teneryfie, Gran Canarii czy
+                  Lanzarote, korzystając z subtropikalnego klimatu przez cały rok.</p>
               <a href="#" class="inline-flex items-center font-medium underline underline-offset-4 text-primary-600 dark:text-primary-500 hover:no-underline">
                   Read in 8 minutes
               </a>
           </article>
           <article class="max-w-xs">
               <a href="#">
-                  <img src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/article/blog-4.png" class="mb-5 rounded-lg" alt="Image 4">
+                  <img src="https://hispanico.pl/wp-content/uploads/2022/06/dominikana-plaza-wyspa-palmy-woda-lazurowa-statki-piasek-niebo-niebieskie-karaiby-morze-karaibskie.jpg" class="mb-5 rounded-lg" alt="Image 4">
               </a>
               <h2 class="mb-2 text-xl font-bold leading-tight text-gray-900 dark:text-white">
                   <a href="#">Dominikana</a>
               </h2>
-              <p class="mb-4  text-gray-500 dark:text-gray-400">Over the past year, Volosoft has undergone many changes! After months of preparation.</p>
+              <p class="mb-4  text-gray-500 dark:text-gray-400">Odkryj tę rajską wyspę z białymi plażami, lazurowym morzem i bujną
+                  tropikalną przyrodą. Nasze wycieczki oferują nie tylko relaks na plaży, ale także możliwość zanurzenia się w
+                  kulturę i tradycje tej urokliwej karaibskiej destynacji.</p>
               <a href="#" class="inline-flex items-center font-medium underline underline-offset-4 text-primary-600 dark:text-primary-500 hover:no-underline">
                   Read in 4 minutes
               </a>
@@ -171,7 +177,7 @@
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
       <div class="mx-auto max-w-screen-md sm:text-center">
           <h2 class="mb-4 text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl dark:text-white">Sign up for our newsletter</h2>
-          <p class="mx-auto mb-8 max-w-2xl  text-gray-500 md:mb-12 sm:text-xl dark:text-gray-400">Stay up to date with the roadmap progress, announcements and exclusive discounts feel free to sign up with your email.</p>
+          <p class="mx-auto mb-8 max-w-2xl  text-gray-500 md:mb-12 sm:text-xl dark:text-gray-400">Zapisz się do naszego newslettera, aby otrzymywać zniżki, informacje o promocjach oraz propozycje kolejnych podróży.</p>
           <form action="#">
               <div class="items-center mx-auto mb-3 space-y-4 max-w-screen-sm sm:flex sm:space-y-0">
                   <div class="relative w-full">
@@ -188,7 +194,7 @@
                       <button type="submit" class="py-3 px-5 w-full text-sm font-medium text-center text-white rounded-lg border cursor-pointer bg-primary-700 border-primary-600 sm:rounded-none sm:rounded-r-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Subscribe</button>
                   </div>
               </div>
-              <div class="mx-auto max-w-screen-sm text-sm text-left text-gray-500 newsletter-form-footer dark:text-gray-300">We care about the protection of your data. <a href="#" class="font-medium text-primary-600 dark:text-primary-500 hover:underline">Read our Privacy Policy</a>.</div>
+              <div class="mx-auto max-w-screen-sm text-sm text-left text-gray-500 newsletter-form-footer dark:text-gray-300">Dbamy o ochronę twoich danych. <a href="#" class="font-medium text-primary-600 dark:text-primary-500 hover:underline">Przeczytaj naszą Politykę Prywatności</a>.</div>
           </form>
       </div>
   </div>
@@ -297,9 +303,9 @@
                   <linearGradient id="paint8_linear_11430_22515" x1="7.15667" y1="21.5399" x2="14.0824" y2="31.9579" gradientUnits="userSpaceOnUse"><stop stop-color="#0092FF"/><stop offset="1" stop-color="#45B2FF"/></linearGradient>
                   </defs>
               </svg>
-              Flowbite
+              Beauty Travel
           </a>
-          <span class="block text-sm text-center text-gray-500 dark:text-gray-400">© 2021-2022 <a href="#" class="hover:underline">Flowbite™</a>. All Rights Reserved.
+          <span class="block text-sm text-center text-gray-500 dark:text-gray-400">© 2023 <a href="#" class="hover:underline">Beauty Travel™</a>. Wszelkie prawa zastrzeżone.
           </span>
           <ul class="flex justify-center mt-5 space-x-5">
               <li>
