--- a/templates/articles.html
+++ b/templates/articles.html
@@ -44,7 +44,7 @@
       </button>
     </div>
     <div class="hidden lg:flex lg:gap-x-12">
-      <a href="#" class="text-sm font-semibold leading-6 text-white">Oferta</a>
+      <a href="crud-blog" class="text-sm font-semibold leading-6 text-white">Oferta</a>
       <a href="#" class="text-sm font-semibold leading-6 text-white">Last Minute</a>
       <a href="#" class="text-sm font-semibold leading-6 text-white">All Inclusive</a>
       <a href="#" class="text-sm font-semibold leading-6 text-white">O Nas</a>
@@ -62,7 +62,7 @@
       <div class="flex items-center justify-between">
         <a href="#" class="-m-1.5 p-1.5">
           <span class="sr-only">Your Company</span>
-          <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
+          <img class="h-8 w-auto" src="https://www.creativefabrica.com/wp-content/uploads/2020/06/18/Plane-Navigation-Travel-Logo-Graphics-4399326-1.png" alt="">
         </a>
         <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
           <span class="sr-only">Close menu</span>
@@ -74,12 +74,14 @@
       <div class="mt-6 flow-root">
         <div class="-my-6 divide-y divide-gray-500/10">
           <div class="space-y-2 py-6">
-            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Features</a>
-            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Marketplace</a>
-            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Company</a>
+            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Oferta</a>
+            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Last Minute</a>
+            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">All Inclusive</a>
+              <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">O Nas</a>
+              <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Kontakt</a>
           </div>
           <div class="py-6">
-            <a href="#" class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Log in</a>
+            <a href="#" class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Zaloguj się</a>
           </div>
         </div>
       </div>
@@ -123,9 +125,7 @@
               </h2>
               <p class="mb-4 text-gray-500 dark:text-gray-400">Oferujemy wyjątkowe wycieczki do malowniczych greckich wysp, gdzie błękitne morze
                   spotyka się z białymi domkami. Doświadcz kultury, smaków i niezwykłych widoków, które Grecja ma do zaoferowania.</p>
-              <a href="#" class="inline-flex items-center font-medium underline underline-offset-4 text-primary-600 dark:text-pink-500 hover:no-underline">
-                  Read in 2 minutes
-              </a>
+
           </article>
           <article class="max-w-xs">
               <a href="#">
@@ -136,9 +136,7 @@
               </h2>
               <p class="mb-4  text-gray-500 dark:text-gray-400">Odkryj fascynujący miks kultur i przeszłości podczas podróży do Turcji. Zwiedzaj historyczne
                   zabytki i delektuj się aromatyczną kuchnią. Turcja to nie tylko krajobrazy, ale także spotkanie z sercem Orientu.</p>
-              <a href="#" class="inline-flex items-center font-medium underline underline-offset-4 text-primary-600 dark:text-pink-500 hover:no-underline">
-                  Read in 12 minutes
-              </a>
+
           </article>
           <article class="max-w-xs">
               <a href="#">
@@ -150,9 +148,7 @@
               <p class="mb-4  text-gray-500 dark:text-gray-400">Nasze wycieczki zapewniają idealne połączenie błękitnego
                   oceanu, złotego piasku i niezwykłych krajobrazów. Doświadcz niezapomnianych chwil na Teneryfie, Gran Canarii czy
                   Lanzarote, korzystając z subtropikalnego klimatu przez cały rok.</p>
-              <a href="#" class="inline-flex items-center font-medium underline underline-offset-4 text-primary-600 dark:text-pink-500 hover:no-underline">
-                  Read in 8 minutes
-              </a>
+
           </article>
           <article class="max-w-xs">
               <a href="#">
@@ -164,9 +160,7 @@
               <p class="mb-4  text-gray-500 dark:text-gray-400">Odkryj tę rajską wyspę z białymi plażami, lazurowym morzem i bujną
                   tropikalną przyrodą. Nasze wycieczki oferują nie tylko relaks na plaży, ale także możliwość zanurzenia się w
                   kulturę i tradycje tej urokliwej karaibskiej destynacji.</p>
-              <a href="#" class="inline-flex items-center font-medium underline underline-offset-4 text-primary-600 dark:text-pink-500 hover:no-underline">
-                  Read in 4 minutes
-              </a>
+
           </article>
       </div>
   </div>
